--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "gensync": "^1.0.0-beta.2",
     "nanoid": "^3.3.2",
     "react": "^18.0.0",
     "react-confetti": "^6.0.1",
